--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="jumbotron">
+  <h1>Stuckdo</h1>
+  <p>This is my smart To Do app, made with Ruby on Rails.</p>
+  <%= link_to 'sign up', "#", class: 'btn btn-primary btn-lg' %>
+</div>
