--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -3,6 +3,7 @@
     <%= link_to edit_task_path(task) do %>
       created <%= time_ago_in_words(task.created_at) %> ago
     <% end %>
+    <%= link_to '<i class="fa fa-trash"></i>'.html_safe, task_path(task), method: :delete, data: {confirm: "Are you sure?"}, class: "pull-right" %>
   </div>
   <div class="panel-body"><%= task.content %></div>
   <div class="panel-footer text-center">
